# CoChat

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/FTXUI-3.0.0/: CMakeLists.txt
src/: CMakeLists.txt
src/complex-client/: .clang-format  CMakeLists.txt  cppc.cpp  main.cpp
src/server/: CMakeLists.txt  co.hpp  main.cpp
src/simple-client/: CMakeLists.txt  cppc.cpp
